--- a/public/src/pattern/_patternhack.scss
+++ b/public/src/pattern/_patternhack.scss
@@ -546,3 +546,10 @@ ul.inline > li, ol.inline > li {
 //                                        Plugin style End
 //---------------------------------------------------------------------------------------------------
 
+// ATTACHMENT DROP IN EMAIL - CSS 
+
+.attach-error{
+ @extend .alert;
+}
+
+// ATTACHMENT DROP IN EMAIL - CSS - END
